--- a/Jenny.properties
+++ b/Jenny.properties
@@ -1,21 +1,51 @@
 Jenny.SearchPaths = Jenny/Jenny/Plugins/Entitas, \
-Jenny/Jenny/Plugins/Jenny
-Jenny.Plugins = Jenny.Plugins, \
+                    Jenny/Jenny/Plugins/Jenny, \
+                    Jenny\Jenny\Plugins\Entitas, \
+                    Jenny\Jenny\Plugins\Jenny
+Jenny.Plugins = Entitas.CodeGeneration.Plugins, \
+                Entitas.Roslyn.CodeGeneration.Plugins, \
+                Entitas.VisualDebugging.CodeGeneration.Plugins, \
+                Jenny.Plugins, \
                 Jenny.Plugins.Unity
 Jenny.PreProcessors = Jenny.Plugins.ValidateProjectPathPreProcessor, \
-                      Jenny.Plugins.Unity.WarnIfCompilationErrorsPreProcessor, \
-                      Jenny.Plugins.TargetFrameworkProfilePreProcessor
-Jenny.DataProviders = 
-Jenny.CodeGenerators = 
+                      Jenny.Plugins.TargetFrameworkProfilePreProcessor, \
+                      Jenny.Plugins.ReferenceAssemblyPathsPreProcessor
+Jenny.DataProviders = Entitas.CodeGeneration.Plugins.ContextDataProvider, \
+                      Entitas.Roslyn.CodeGeneration.Plugins.CleanupDataProvider, \
+                      Entitas.Roslyn.CodeGeneration.Plugins.ComponentDataProvider, \
+                      Entitas.Roslyn.CodeGeneration.Plugins.EntityIndexDataProvider
+Jenny.CodeGenerators = Entitas.CodeGeneration.Plugins.ComponentContextApiGenerator, \
+                       Entitas.CodeGeneration.Plugins.ComponentEntityApiGenerator, \
+                       Entitas.CodeGeneration.Plugins.ComponentEntityApiInterfaceGenerator, \
+                       Entitas.CodeGeneration.Plugins.ComponentGenerator, \
+                       Entitas.CodeGeneration.Plugins.ComponentLookupGenerator, \
+                       Entitas.CodeGeneration.Plugins.ComponentMatcherApiGenerator, \
+                       Entitas.CodeGeneration.Plugins.ContextAttributeGenerator, \
+                       Entitas.CodeGeneration.Plugins.ContextGenerator, \
+                       Entitas.CodeGeneration.Plugins.ContextMatcherGenerator, \
+                       Entitas.CodeGeneration.Plugins.ContextsGenerator, \
+                       Entitas.CodeGeneration.Plugins.EntityGenerator, \
+                       Entitas.CodeGeneration.Plugins.EntityIndexGenerator, \
+                       Entitas.CodeGeneration.Plugins.EventEntityApiGenerator, \
+                       Entitas.CodeGeneration.Plugins.EventListenerComponentGenerator, \
+                       Entitas.CodeGeneration.Plugins.EventListenerInterfaceGenerator, \
+                       Entitas.CodeGeneration.Plugins.EventSystemGenerator, \
+                       Entitas.CodeGeneration.Plugins.EventSystemsGenerator, \
+                       Entitas.Roslyn.CodeGeneration.Plugins.CleanupSystemGenerator, \
+                       Entitas.Roslyn.CodeGeneration.Plugins.CleanupSystemsGenerator, \
+                       Entitas.VisualDebugging.CodeGeneration.Plugins.ContextObserverGenerator, \
+                       Entitas.VisualDebugging.CodeGeneration.Plugins.FeatureClassGenerator
 Jenny.PostProcessors = Jenny.Plugins.AddFileHeaderPostProcessor, \
                        Jenny.Plugins.CleanTargetDirectoryPostProcessor, \
                        Jenny.Plugins.MergeFilesPostProcessor, \
                        Jenny.Plugins.NewLinePostProcessor, \
                        Jenny.Plugins.UpdateCsprojPostProcessor, \
                        Jenny.Plugins.WriteToDiskPostProcessor, \
-                       Jenny.Plugins.ConsoleWriteLinePostProcessor, \
-                       Jenny.Plugins.Unity.DebugLogPostProcessor
+                       Jenny.Plugins.ConsoleWriteLinePostProcessor
 Jenny.Server.Port = 3333
 Jenny.Client.Host = localhost
 Jenny.Plugins.ProjectPath = Unity.Model.csproj
 Jenny.Plugins.TargetDirectory = Assets/Framework/Combat
+Entitas.CodeGeneration.Plugins.Contexts = Game, \
+                                          Input
+Entitas.CodeGeneration.Plugins.IgnoreNamespaces = false
