--- a/Jenny.properties
+++ b/Jenny.properties
@@ -1,4 +1,5 @@
-Jenny.SearchPaths = Jenny/Jenny/Plugins/Entitas, \
+Jenny.SearchPaths = Assets\3rdPlugins\Entitas\Jenny\Editor\Jenny, \
+                    Jenny/Jenny/Plugins/Entitas, \
                     Jenny/Jenny/Plugins/Jenny, \
                     Jenny\Jenny\Plugins\Entitas, \
                     Jenny\Jenny\Plugins\Jenny
@@ -8,9 +9,11 @@ Jenny.Plugins = Entitas.CodeGeneration.Plugins, \
                 Jenny.Plugins, \
                 Jenny.Plugins.Unity
 Jenny.PreProcessors = Jenny.Plugins.ValidateProjectPathPreProcessor, \
-                      Jenny.Plugins.TargetFrameworkProfilePreProcessor, \
-                      Jenny.Plugins.ReferenceAssemblyPathsPreProcessor
-Jenny.DataProviders = Entitas.CodeGeneration.Plugins.ContextDataProvider, \
+                      Jenny.Plugins.Unity.WarnIfCompilationErrorsPreProcessor, \
+                      Jenny.Plugins.TargetFrameworkProfilePreProcessor
+Jenny.DataProviders = Entitas.CodeGeneration.Plugins.ComponentDataProvider, \
+                      Entitas.CodeGeneration.Plugins.ContextDataProvider, \
+                      Entitas.CodeGeneration.Plugins.EntityIndexDataProvider, \
                       Entitas.Roslyn.CodeGeneration.Plugins.CleanupDataProvider, \
                       Entitas.Roslyn.CodeGeneration.Plugins.ComponentDataProvider, \
                       Entitas.Roslyn.CodeGeneration.Plugins.EntityIndexDataProvider
@@ -41,7 +44,8 @@ Jenny.PostProcessors = Jenny.Plugins.AddFileHeaderPostProcessor, \
                        Jenny.Plugins.NewLinePostProcessor, \
                        Jenny.Plugins.UpdateCsprojPostProcessor, \
                        Jenny.Plugins.WriteToDiskPostProcessor, \
-                       Jenny.Plugins.ConsoleWriteLinePostProcessor
+                       Jenny.Plugins.ConsoleWriteLinePostProcessor, \
+                       Jenny.Plugins.Unity.DebugLogPostProcessor
 Jenny.Server.Port = 3333
 Jenny.Client.Host = localhost
 Jenny.Plugins.ProjectPath = Unity.Model.csproj
@@ -49,3 +53,4 @@ Jenny.Plugins.TargetDirectory = Assets/Framework/Combat
 Entitas.CodeGeneration.Plugins.Contexts = Game, \
                                           Input
 Entitas.CodeGeneration.Plugins.IgnoreNamespaces = false
+Entitas.CodeGeneration.Plugins.Assemblies = Library/ScriptAssemblies/Assembly-CSharp.dll
