--- a/Jenny.properties
+++ b/Jenny.properties
@@ -9,11 +9,8 @@ Jenny.Plugins = Entitas.CodeGeneration.Plugins, \
                 Jenny.Plugins, \
                 Jenny.Plugins.Unity
 Jenny.PreProcessors = Jenny.Plugins.ValidateProjectPathPreProcessor, \
-                      Jenny.Plugins.Unity.WarnIfCompilationErrorsPreProcessor, \
-                      Jenny.Plugins.TargetFrameworkProfilePreProcessor
-Jenny.DataProviders = Entitas.CodeGeneration.Plugins.ComponentDataProvider, \
-                      Entitas.CodeGeneration.Plugins.ContextDataProvider, \
-                      Entitas.CodeGeneration.Plugins.EntityIndexDataProvider, \
+                      Jenny.Plugins.ReferenceAssemblyPathsPreProcessor
+Jenny.DataProviders = Entitas.CodeGeneration.Plugins.ContextDataProvider, \
                       Entitas.Roslyn.CodeGeneration.Plugins.CleanupDataProvider, \
                       Entitas.Roslyn.CodeGeneration.Plugins.ComponentDataProvider, \
                       Entitas.Roslyn.CodeGeneration.Plugins.EntityIndexDataProvider
@@ -41,11 +38,9 @@ Jenny.CodeGenerators = Entitas.CodeGeneration.Plugins.ComponentContextApiGenerat
 Jenny.PostProcessors = Jenny.Plugins.AddFileHeaderPostProcessor, \
                        Jenny.Plugins.CleanTargetDirectoryPostProcessor, \
                        Jenny.Plugins.MergeFilesPostProcessor, \
-                       Jenny.Plugins.NewLinePostProcessor, \
                        Jenny.Plugins.UpdateCsprojPostProcessor, \
                        Jenny.Plugins.WriteToDiskPostProcessor, \
-                       Jenny.Plugins.ConsoleWriteLinePostProcessor, \
-                       Jenny.Plugins.Unity.DebugLogPostProcessor
+                       Jenny.Plugins.ConsoleWriteLinePostProcessor
 Jenny.Server.Port = 3333
 Jenny.Client.Host = localhost
 Jenny.Plugins.ProjectPath = Unity.Model.csproj
