--- a/Jenny.properties
+++ b/Jenny.properties
@@ -1,8 +1,6 @@
-Jenny.SearchPaths = Assets\3rdPlugins\Entitas\Jenny\Editor\Jenny, \
-                    Jenny/Jenny/Plugins/Entitas, \
-                    Jenny/Jenny/Plugins/Jenny, \
-                    Jenny\Jenny\Plugins\Entitas, \
-                    Jenny\Jenny\Plugins\Jenny
+Jenny.SearchPaths = Assets/3rdPlugins/Entitas/Entitas, \
+                    Jenny/Plugins/Entitas, \
+                    Jenny/Plugins/Jenny
 Jenny.Plugins = Entitas.CodeGeneration.Plugins, \
                 Entitas.Roslyn.CodeGeneration.Plugins, \
                 Entitas.VisualDebugging.CodeGeneration.Plugins, \
@@ -43,9 +41,9 @@ Jenny.PostProcessors = Jenny.Plugins.AddFileHeaderPostProcessor, \
                        Jenny.Plugins.ConsoleWriteLinePostProcessor
 Jenny.Server.Port = 3333
 Jenny.Client.Host = localhost
-Jenny.Plugins.ProjectPath = Unity.Model.csproj
-Jenny.Plugins.TargetDirectory = Assets/Framework/Combat
 Entitas.CodeGeneration.Plugins.Contexts = Game, \
                                           Input
 Entitas.CodeGeneration.Plugins.IgnoreNamespaces = false
-Entitas.CodeGeneration.Plugins.Assemblies = Library/ScriptAssemblies/Assembly-CSharp.dll
+Jenny.Plugins.ProjectPath = Unity.Model.csproj
+Jenny.Plugins.TargetDirectory = Assets/Framework/Battle
+Entitas.CodeGeneration.Plugins.Assemblies = Library/ScriptAssemblies/Unity.3rdPlugin.dll
