--- a/Jenny.properties
+++ b/Jenny.properties
@@ -1,6 +1,6 @@
-Jenny.SearchPaths = Assets/3rdPlugins/Entitas/Entitas, \
-                    Jenny/Plugins/Entitas, \
-                    Jenny/Plugins/Jenny
+Jenny.SearchPaths = Jenny/Plugins/Entitas, \
+                    Jenny/Plugins/Jenny, \
+                    Assets/3rdPlugins/Entitas/Entitas
 Jenny.Plugins = Entitas.CodeGeneration.Plugins, \
                 Entitas.Roslyn.CodeGeneration.Plugins, \
                 Entitas.VisualDebugging.CodeGeneration.Plugins, \
@@ -46,4 +46,3 @@ Entitas.CodeGeneration.Plugins.Contexts = Game, \
 Entitas.CodeGeneration.Plugins.IgnoreNamespaces = false
 Jenny.Plugins.ProjectPath = Unity.Model.csproj
 Jenny.Plugins.TargetDirectory = Assets/Framework/Battle
-Entitas.CodeGeneration.Plugins.Assemblies = Library/ScriptAssemblies/Unity.3rdPlugin.dll
