--- a/Assets/Editor/Unity.Editor.asmdef
+++ b/Assets/Editor/Unity.Editor.asmdef
@@ -6,7 +6,8 @@
         "GUID:89fdb54e773827b40b9127329bdaed75",
         "GUID:0d1ae7fff56963548a2a2a16dab3c5c6",
         "GUID:467916a821f46ee41a7cbd0032e57641",
-        "GUID:4d1926c9df5b052469a1c63448b7609a"
+        "GUID:4d1926c9df5b052469a1c63448b7609a",
+        "GUID:2373f786d14518f44b0f475db77ba4de"
     ],
     "includePlatforms": [
         "Editor"
