--- a/Assets/3rdPlugins/Unity.3rdPlugin.asmdef
+++ b/Assets/3rdPlugins/Unity.3rdPlugin.asmdef
@@ -1,9 +1,7 @@
 {
     "name": "Unity.3rdPlugin",
     "rootNamespace": "",
-    "references": [
-        "GUID:7a1fa966b0ea23f40a6a4dc4dab1e297"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
