--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -23,7 +23,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>Temp\bin\Debug\</OutputPath>
-    <DefineConstants>UNITY_2022_3_17;UNITY_2022_3;UNITY_2022;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_4_OR_NEWER;UNITY_2018_1_OR_NEWER;UNITY_2018_2_OR_NEWER;UNITY_2018_3_OR_NEWER;UNITY_2018_4_OR_NEWER;UNITY_2019_1_OR_NEWER;UNITY_2019_2_OR_NEWER;UNITY_2019_3_OR_NEWER;UNITY_2019_4_OR_NEWER;UNITY_2020_1_OR_NEWER;UNITY_2020_2_OR_NEWER;UNITY_2020_3_OR_NEWER;UNITY_2021_1_OR_NEWER;UNITY_2021_2_OR_NEWER;UNITY_2021_3_OR_NEWER;UNITY_2022_1_OR_NEWER;UNITY_2022_2_OR_NEWER;UNITY_2022_3_OR_NEWER;PLATFORM_ARCH_64;UNITY_64;UNITY_INCLUDE_TESTS;ENABLE_AR;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_EVENT_QUEUE;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_TEXTURE_STREAMING;ENABLE_VIRTUALTEXTURING;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_UNITYWEBREQUEST;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_EDITOR_GAME_SERVICES;ENABLE_UNITY_GAME_SERVICES_ANALYTICS_SUPPORT;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_GENERATE_NATIVE_PLUGINS_FOR_ASSEMBLIES_API;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_MANAGED_JOBS;ENABLE_MANAGED_TRANSFORM_JOBS;ENABLE_MANAGED_ANIMATION_JOBS;ENABLE_MANAGED_AUDIO_JOBS;ENABLE_MANAGED_UNITYTLS;INCLUDE_DYNAMIC_GI;ENABLE_SCRIPTING_GC_WBARRIERS;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_VIDEO;ENABLE_ACCELERATOR_CLIENT_DEBUGGING;ENABLE_NAVIGATION_PACKAGE_DEBUG_VISUALIZATION;ENABLE_NAVIGATION_HEIGHTMESH_RUNTIME_SUPPORT;ENABLE_NAVIGATION_UI_REQUIRES_PACKAGE;PLATFORM_STANDALONE;TEXTCORE_1_0_OR_NEWER;PLATFORM_STANDALONE_WIN;UNITY_STANDALONE_WIN;UNITY_STANDALONE;UNITY_UGP_API;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_NVIDIA;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_OUT_OF_PROCESS_CRASH_HANDLER;ENABLE_CLUSTER_SYNC;ENABLE_CLUSTERINPUT;PLATFORM_UPDATES_TIME_OUTSIDE_OF_PLAYER_LOOP;GFXDEVICE_WAITFOREVENT_MESSAGEPUMP;PLATFORM_INITIALIZES_MEMORY_MANAGER_EXPLICITLY;ENABLE_MONO;NET_4_6;NET_UNITY_4_8;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_UNITY_COLLECTIONS_CHECKS;ENABLE_BURST_AOT;UNITY_TEAM_LICENSE;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_DIRECTOR;ENABLE_LOCALIZATION;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_TILEMAP;ENABLE_TIMELINE;ENABLE_LEGACY_INPUT_MANAGER;TEXTCORE_FONT_ENGINE_1_5_OR_NEWER;ODIN_INSPECTOR;ODIN_INSPECTOR_3;View;ODIN_INSPECTOR_3_1;CSHARP_7_OR_LATER;CSHARP_7_3_OR_NEWER</DefineConstants>
+    <DefineConstants>UNITY_2022_3_17;UNITY_2022_3;UNITY_2022;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_4_OR_NEWER;UNITY_2018_1_OR_NEWER;UNITY_2018_2_OR_NEWER;UNITY_2018_3_OR_NEWER;UNITY_2018_4_OR_NEWER;UNITY_2019_1_OR_NEWER;UNITY_2019_2_OR_NEWER;UNITY_2019_3_OR_NEWER;UNITY_2019_4_OR_NEWER;UNITY_2020_1_OR_NEWER;UNITY_2020_2_OR_NEWER;UNITY_2020_3_OR_NEWER;UNITY_2021_1_OR_NEWER;UNITY_2021_2_OR_NEWER;UNITY_2021_3_OR_NEWER;UNITY_2022_1_OR_NEWER;UNITY_2022_2_OR_NEWER;UNITY_2022_3_OR_NEWER;PLATFORM_ARCH_64;UNITY_64;UNITY_INCLUDE_TESTS;ENABLE_AR;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_EVENT_QUEUE;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_TEXTURE_STREAMING;ENABLE_VIRTUALTEXTURING;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_UNITYWEBREQUEST;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_EDITOR_GAME_SERVICES;ENABLE_UNITY_GAME_SERVICES_ANALYTICS_SUPPORT;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_GENERATE_NATIVE_PLUGINS_FOR_ASSEMBLIES_API;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_MANAGED_JOBS;ENABLE_MANAGED_TRANSFORM_JOBS;ENABLE_MANAGED_ANIMATION_JOBS;ENABLE_MANAGED_AUDIO_JOBS;ENABLE_MANAGED_UNITYTLS;INCLUDE_DYNAMIC_GI;ENABLE_SCRIPTING_GC_WBARRIERS;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_VIDEO;ENABLE_ACCELERATOR_CLIENT_DEBUGGING;ENABLE_NAVIGATION_PACKAGE_DEBUG_VISUALIZATION;ENABLE_NAVIGATION_HEIGHTMESH_RUNTIME_SUPPORT;ENABLE_NAVIGATION_UI_REQUIRES_PACKAGE;PLATFORM_STANDALONE;TEXTCORE_1_0_OR_NEWER;PLATFORM_STANDALONE_WIN;UNITY_STANDALONE_WIN;UNITY_STANDALONE;UNITY_UGP_API;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_NVIDIA;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_OUT_OF_PROCESS_CRASH_HANDLER;ENABLE_CLUSTER_SYNC;ENABLE_CLUSTERINPUT;PLATFORM_UPDATES_TIME_OUTSIDE_OF_PLAYER_LOOP;GFXDEVICE_WAITFOREVENT_MESSAGEPUMP;PLATFORM_INITIALIZES_MEMORY_MANAGER_EXPLICITLY;ENABLE_MONO;NET_4_6;NET_UNITY_4_8;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_UNITY_COLLECTIONS_CHECKS;ENABLE_BURST_AOT;UNITY_TEAM_LICENSE;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_DIRECTOR;ENABLE_LOCALIZATION;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_TILEMAP;ENABLE_TIMELINE;ENABLE_LEGACY_INPUT_MANAGER;TEXTCORE_FONT_ENGINE_1_5_OR_NEWER;ODIN_INSPECTOR;ODIN_INSPECTOR_3;ODIN_INSPECTOR_3_1;CSHARP_7_OR_LATER;CSHARP_7_3_OR_NEWER</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169;USG0001</NoWarn>
@@ -64,92 +64,92 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\MVVM\View\Binding\Binding.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\Event\AEvent.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Expand\GameObject\GameObjectExpand.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Model\ModelAttribute.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Config\ConfigManager.cs" />
     <Compile Include="Assets\Hotfix\Logic\Model\MainModel.cs" />
-    <Compile Include="Assets\Hotfix\Logic\Camera\SmoothFoolow2D.cs" />
     <Compile Include="Assets\Hotfix\Logic\SceneState\GameSceneState.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\Pool\APool.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Joystick\Joystick.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\UIEventHandlerAttribute.cs" />
-    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Game\GamePanel.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\UIPanel.cs" />
-    <Compile Include="Assets\Hotfix\Logic\SceneState\LoginSceneState.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\UIEventType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Singleton\ISingletonFixedUpdate.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Config\Tables.cs" />
-    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Loading\LoadingPanel.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\ArchiveManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\GameSetting\GameSettingManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\Event\EventType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\CVType.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Object\Game.cs" />
     <Compile Include="Assets\Hotfix\Runtime\GlobalConfig\AssetType\AssetType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Model\ModelTemplate.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Expand\PanelType\PanelTypeExpand.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Object\GameObjectComponent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\ScrollerPro\LoopScroll.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\Scene.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\ResolutionType.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Command\CommandData.cs" />
     <Compile Include="Assets\Hotfix\Logic\Camera\CameraController.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Video\VideoManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\MVVM\View\View\IView.cs" />
     <Compile Include="Assets\Hotfix\Runtime\GlobalConfig\SceneName\SceneName.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\Event\IEvent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\DisplayModeType.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\SceneState\SceneStateManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\IPanelHandler.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\ScrollerPro\LoopScrollItem.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\Event\EventAttribute.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\SceneState\SceneStateType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Command\CommandManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\SceneState\SceneState.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Expand\ObjectBase\ObjectBaseExpand.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\Item.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Manager\Manager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Object\Base\AObjectBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\TBItem.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Panel\Login\LoginPanel.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\MVVM\View\ViewModel\ViewModelBase.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Singleton\ISingletonLateUpdate.cs" />
+    <Compile Include="Assets\Hotfix\Logic\Camera\SmoothFoolow3D.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Object\Root.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\UIBinding.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Global\GlobalManager.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Singleton\ISingleton.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Command\CommandDataType.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\SceneState\ISceneState.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\Panel.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Object\Base\AttributeBase.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Singleton\Singleton.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Object\Base\IUpdate.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Init\Init.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\SceneState\SceneStateAttribute.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Expand\GameObject\GameObjectExpand.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Config\ConfigManager.cs" />
+    <Compile Include="Assets\Hotfix\Logic\Camera\SmoothFoolow2D.cs" />
+    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Game\GamePanel.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\UIPanel.cs" />
+    <Compile Include="Assets\Hotfix\Logic\SceneState\LoginSceneState.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Config\Tables.cs" />
+    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Loading\LoadingPanel.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\ArchiveManager.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\Event\EventType.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Object\Game.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Expand\PanelType\PanelTypeExpand.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Object\GameObjectComponent.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Command\CommandData.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\Event\IEvent.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\SceneState\SceneStateManager.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\ScrollerPro\LoopScrollItem.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\Event\EventAttribute.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Expand\ObjectBase\ObjectBaseExpand.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Manager\Manager.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Object\Base\AObjectBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Language\LanguageManager.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Panel\Main\MainPanel.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Audio\AudioManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\MVVM\View\ViewModel\ViewModelBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Singleton\ISingletonUpdate.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Singleton\ISingletonLateUpdate.cs" />
-    <Compile Include="Assets\Hotfix\Logic\Camera\SmoothFoolow3D.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\ScrollerPro\LoopScrollItemPool.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Object\Root.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Model\ModelManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\UIBinding.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\UIEvent.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Global\GlobalManager.cs" />
     <Compile Include="Assets\Hotfix\Logic\SceneState\MainSceneState.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Singleton\ISingleton.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\UIEventManager.cs" />
     <Compile Include="Assets\Hotfix\Logic\EventHandler\InitEventHandler.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\UserSetData.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Command\CommandDataType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\Base\ILateUpdate.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Command\CommandType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\UserData.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\MVVM\View\Binding\ViewModelBinding.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\SceneState\ISceneState.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\Panel.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\EventSystem.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Object\Base\AttributeBase.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Singleton\Singleton.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\Base\IFixedUpdate.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\ProtobufObject.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Object\Base\IUpdate.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\Event\EventData.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Init\Init.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Panel\Top\TopPanel.cs" />
     <Compile Include="Assets\Hotfix\Logic\Model\LoginModel.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Language\LanguageType.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\SceneState\SceneStateAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Hotfix\Unity.Hotfix.asmdef" />
@@ -511,6 +511,14 @@
       <HintPath>Assets\3rdPlugins\BouncyCastle\BouncyCastle.Crypto.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Unity.Analytics.Tracker">
+      <HintPath>Library\PackageCache\com.unity.analytics@3.8.1\Unity.Analytics.Tracker.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Analytics.Editor">
+      <HintPath>Library\PackageCache\com.unity.analytics@3.8.1\Unity.Analytics.Editor.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Sirenix.Serialization">
       <HintPath>Assets\3rdPlugins\Sirenix\Assemblies\Sirenix.Serialization.dll</HintPath>
       <Private>False</Private>
@@ -659,6 +667,10 @@
       <HintPath>Assets\3rdPlugins\Sirenix\Assemblies\Sirenix.Utilities.Editor.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Library\PackageCache\com.unity.nuget.newtonsoft-json@3.2.1\Runtime\Newtonsoft.Json.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Jenny.Plugins">
       <HintPath>Assets\3rdPlugins\Entitas\Jenny\Editor\Jenny\Jenny.Plugins.dll</HintPath>
       <Private>False</Private>
@@ -689,6 +701,10 @@
     </Reference>
     <Reference Include="DesperateDevs.Caching">
       <HintPath>Assets\3rdPlugins\Entitas\DesperateDevs\DesperateDevs.Caching.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Unity.Analytics.StandardEvents">
+      <HintPath>Library\PackageCache\com.unity.analytics@3.8.1\AnalyticsStandardEvents\Unity.Analytics.StandardEvents.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="mscorlib">
