--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\GameObject\GameObjectExpand.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Config\ConfigManager.cs" />
     <Compile Include="Assets\Hotfix\Logic\Camera\SmoothFoolow2D.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Jump\JumpManager.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Panel\Game\GamePanel.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\UIPanel.cs" />
     <Compile Include="Assets\Hotfix\Logic\SceneState\LoginSceneState.cs" />
