--- a/Jenny.properties
+++ b/Jenny.properties
@@ -41,8 +41,7 @@ Jenny.PostProcessors = Jenny.Plugins.AddFileHeaderPostProcessor, \
                        Jenny.Plugins.ConsoleWriteLinePostProcessor
 Jenny.Server.Port = 3333
 Jenny.Client.Host = localhost
-Entitas.CodeGeneration.Plugins.Contexts = Game, \
-                                          Input
+Entitas.CodeGeneration.Plugins.Contexts = Logic
 Entitas.CodeGeneration.Plugins.IgnoreNamespaces = false
 Jenny.Plugins.ProjectPath = Unity.Model.csproj
 Jenny.Plugins.TargetDirectory = Assets/Framework/Battle
