--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,11 +8,11 @@
     "com.unity.ads": "4.4.2",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.analytics": "3.8.1",
-    "com.unity.collab-proxy": "2.2.0",
+    "com.unity.collab-proxy": "2.3.1",
     "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.purchasing": "4.9.3",
+    "com.unity.purchasing": "4.11.0",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.8",
     "com.unity.timeline": "1.7.6",
@@ -52,8 +52,8 @@
   },
   "scopedRegistries": [
     {
-      "name": "package.openupm.cn",
-      "url": "https://package.openupm.cn",
+      "name": "package.openupm.com",
+      "url": "https://package.openupm.com",
       "scopes": [
         "com.tuyoogame.yooasset"
       ]
